--- a/index.html
+++ b/index.html
@@ -79,8 +79,11 @@ footer {
     <main>
         <!-- Banner Section with Background Image/Video -->
         <section class="banner">
-            <h1>Welcome to Your Clothing Store</h1>
-            <!-- You can add background images or videos here -->
+            <h1 style="color: #333; background-color: #fff; padding: 10px;">
+                Welcome to Your Clothing Store
+            </h1>
+            
+
         </section>
     
         <!-- Dress Collection Section -->
